ffmpegfs NEWS

Important changes in 1.4 (2018-05-XX)

* Feature:
* Feature: Changed the fuse operations code module to c++ (minimise danger of 
           memory leaks or buffer overruns)	   

* Bugfix: Set mp4 profile to high/3.1 to enable plqayback under enable playback under
          Win 7.
* Bugfix: Fix formatting of help text.

* Workaround: Fixed Libav support: Deinterlace code did not compile. Should be possible
              to get it working, but for now it is simply disabled.
              But honestly I don't want to get it working. I am thinking of dropping
              Libav completely.

* Fix deprecation: 2018-xx-xx - xxxxxxx - lavf 58.9.100 - avformat.h
    Deprecate use of  av_iformat_next(), av_oformat_next().

Important changes in 1.3 (2018-05-04)

Changes in this release:

* Feature: Add option to deinterlace video if required (will improve picture
           quality when viewed in browsers via HTML5.
* Feature: Set stream duration from source file as hint for encoder.
* Feature: Enhanced logging output for better readability.
* Feature: Add pre-buffer option. Files will be decoded up to this limit first
           before made accessible. This ensures smoot startup.
* Feature: Enhanced configure that checks whether libavresample or libswresample 
           is present.
* Feature: Improved recoding detection. Files are recoded if the source file size 
           or timestamp changes, or different encoding options are selected 
           (e.g. a different bitrate, vidoe size etc.).
* Feature: Allow profiles for target browsers or players. Currently selectable:
           NONE     no profile
           FF       optimise for Firefox
           EDGE     optimise for MS Edge and Internet Explorer > 11
           IE       optimise for MS Edge and Internet Explorer <= 11
           CHROME   Google Chrome
           SAFARI   Apple Safari
           OPERA    Opera
           MAXTHON  Maxthon
           Defaults to NONE