@@ -30,12 +30,110 @@
 #include <dirent.h>
 #include <unistd.h>
 #include <map>
+#include <vector>
+#include <assert.h>
 
+typedef enum _tagVIRTUALTYPE
+{
+    VIRTUALTYPE_PASSTHROUGH,        // passthrough file, not used
+    VIRTUALTYPE_REGULAR,            // Regular file to transcode
+    VIRTUALTYPE_SCRIPT,             // Virtual script
+} VIRTUALTYPE;
+typedef VIRTUALTYPE const *LPCVIRTUALTYPE;
+typedef VIRTUALTYPE LPVIRTUALTYPE;
+
+typedef struct _tagVIRTUALFILE
+{
+    VIRTUALTYPE m_type;
+    string      m_origfile;
+    struct stat m_st;
+
+} VIRTUALFILE;
+typedef VIRTUALFILE const *LPCVIRTUALFILE;
+typedef VIRTUALFILE *LPVIRTUALFILE;
+
+static LPCVIRTUALFILE insert_file(VIRTUALTYPE type, const string &filename, const string & origfile, const struct stat *st);
+static void init_stat(struct stat *st, bool directory);
+static void prepare_script();
 static void translate_path(string *origpath, const char* path);
 static bool transcoded_name(string *path);
-static bool find_original(string *path);
+static LPCVIRTUALFILE find_original(string *path);
 
-static map<string, string> filenames;
+static vector<char> index_buffer;
+static map<string, VIRTUALFILE> filenames;
+
+static void init_stat(struct stat * st, bool directory)
+{
+    memset(st, 0, sizeof(struct stat));
+
+    st->st_mode = S_IFREG | S_IRUSR | S_IRGRP | S_IROTH;
+    if (directory)
+    {
+        st->st_mode |= S_IFDIR | S_IXUSR | S_IXGRP | S_IXOTH;
+        st->st_nlink = 2;
+    }
+    else
+    {
+        st->st_mode |= S_IFREG;
+        st->st_nlink = 1;
+    }
+
+#if defined __x86_64__ || !defined __USE_FILE_OFFSET64
+    st->st_size = index_buffer.size();
+#else
+    st->st_size = index_text.size();
+#endif
+    st->st_blocks = (st->st_size + 512 - 1) / 512;
+
+    // Set current user as owner
+    st->st_uid = getuid();
+    st->st_gid = getgid();
+
+    // Use current date/time
+    st->st_atime = st->st_mtime = st->st_ctime = time(NULL);
+}
+
+static void prepare_script()
+{
+    string scriptsource;
+
+    exepath(&scriptsource);
+    scriptsource += params.m_scriptsource;
+
+    ffmpegfs_debug("%s * Reading virtual script source.", scriptsource.c_str());
+
+    FILE *fpi = fopen(scriptsource.c_str(), "rt");
+    if (fpi == NULL)
+    {
+        ffmpegfs_warning("%s * File open failed. Disabling script: %s", scriptsource.c_str(), strerror(errno));
+        params.m_enablescript = false;
+    }
+    else
+    {
+        struct stat st;
+        if (fstat(fileno(fpi), &st) == -1)
+        {
+            ffmpegfs_warning("%s * File could not be accessed. Disabling script: %s", scriptsource.c_str(), strerror(errno));
+            params.m_enablescript = false;
+        }
+        else
+        {
+            index_buffer.resize(st.st_size);
+
+            if (fread(&index_buffer[0], 1, st.st_size, fpi) != (size_t)st.st_size)
+            {
+                ffmpegfs_warning("%s * File could not be read. Disabling script: %s", scriptsource.c_str(), strerror(errno));
+                params.m_enablescript = false;
+            }
+            else
+            {
+                ffmpegfs_debug("%s * Read %zu bytes of script file.", scriptsource.c_str(), index_buffer.size());
+            }
+        }
+
+        fclose(fpi);
+    }
+}
 
 // Translate file names from FUSE to the original absolute path.
 static void translate_path(string *origpath, const char* path)
@@ -61,20 +159,37 @@ static bool transcoded_name(string * path)
     }
 }
 
+// Add new virtual file to internal list
+// Returns constant pointer to VIRTUALFILE object of file, NULL if not found
+static LPCVIRTUALFILE insert_file(VIRTUALTYPE type, const string & filename, const string & origfile, const struct stat *st)
+{
+    VIRTUALFILE virtualfile;
+
+    virtualfile.m_type = type;
+    virtualfile.m_origfile = origfile;
+    memcpy(&virtualfile.m_st, st, sizeof(struct stat));
+
+    filenames.insert(make_pair(filename, virtualfile));
+
+    map<string, VIRTUALFILE>::iterator p = filenames.end();
+
+    return &p->second;
+}
+
 // Given the destination (post-transcode) file name, determine the name of
 // the original file to be transcoded.
-// Returns true if filename has been changed
-static bool find_original(string * path)
+// Returns contstant pointer to VIRTUALFILE object of file, NULL if not found
+static LPCVIRTUALFILE find_original(string * path)
 {
     // 1st do fast map lookup
-    map<string, string>::iterator p = filenames.find(*path);
+    map<string, VIRTUALFILE>::iterator p = filenames.find(*path);
 
     errno = 0;
 
     if (p != filenames.end())
     {
-        *path = p->second;
-        return true;
+        *path = p->second.m_origfile;
+        return &p->second;
     }
     else
     {
@@ -84,16 +199,19 @@ static bool find_original(string * path)
         {
             string tmppath(*path);
 
-            for (size_t i=0; decoder_list[i]; ++i)
+            for (size_t i = 0; decoder_list[i]; ++i)
             {
+                struct stat st;
+
                 replace_ext(&tmppath, decoder_list[i]);
-                if (access(tmppath.c_str(), F_OK) == 0)
+
+                //if (access(tmppath.c_str(), F_OK) == 0)
+                if (lstat(tmppath.c_str(), &st) == 0)
                 {
                     // File exists with this extension
-                    filenames.insert(make_pair(*path, tmppath));
-
+                    LPCVIRTUALFILE p = insert_file(VIRTUALTYPE_REGULAR, *path, tmppath, &st);
                     *path = tmppath;
-                    return true;
+                    return p;
                 }
                 else
                 {
@@ -104,7 +222,7 @@ static bool find_original(string * path)
         }
     }
     // Source file exists with no supported extension, keep path
-    return false;
+    return NULL;
 }
 
 int ffmpegfs_readlink(const char *path, char *buf, size_t size)
@@ -169,7 +287,7 @@ int ffmpegfs_readdir(const char *path, void *buf, fuse_fill_dir_t filler, off_t 
                 {
                     if (transcoded_name(&filename))
                     {
-                        filenames.insert(make_pair(origpath + filename, origfile));
+                        insert_file(VIRTUALTYPE_REGULAR, origpath + filename, origfile, &st);
                     }
                 }
 
@@ -180,6 +298,25 @@ int ffmpegfs_readdir(const char *path, void *buf, fuse_fill_dir_t filler, off_t 
                 {
                     break;
                 }
+            }
+
+            // Add a virtual script if enabled
+            if (params.m_enablescript)
+            {
+                string filename(params.m_scriptfile);
+                string origfile;
+                struct stat st;
+
+                origfile = origpath + filename;
+
+                init_stat(&st, false);
+
+                if (filler(buf, filename.c_str(), &st, 0))
+                {
+                    // break;
+                }
+
+                insert_file(VIRTUALTYPE_SCRIPT, origpath + filename, origfile, &st);
             }
 
             errno = 0;  // Just to make sure - reset any error
@@ -219,41 +356,64 @@ int ffmpegfs_getattr(const char *path, struct stat *stbuf)
     }
 
     // This is a virtual file
-    find_original(&origpath);
+    LPCVIRTUALFILE virtualfile = find_original(&origpath);
+    VIRTUALTYPE type = (virtualfile != NULL) ? virtualfile->m_type : VIRTUALTYPE_REGULAR;
 
-    if (lstat(origpath.c_str(), stbuf) == -1)
+    switch (type)
     {
-        return -errno;
+    case VIRTUALTYPE_SCRIPT:
+    {
+        // Use stored status
+        mempcpy(stbuf, &virtualfile->m_st, sizeof(struct stat));
+        errno = 0;
+        break;
     }
-
-    // Remove write permissions, make no sense
-    stbuf->st_mode &= ~(S_IWUSR | S_IWGRP | S_IWOTH);
-
-    // Get size for resulting output file from regular file, otherwise it's a symbolic link.
-    if (S_ISREG(stbuf->st_mode))
+    case VIRTUALTYPE_REGULAR:
     {
-        if (!transcoder_cached_filesize(origpath.c_str(), stbuf))
+        if (lstat(origpath.c_str(), stbuf) == -1)
         {
-            struct Cache_Entry* cache_entry;
+            return -errno;
+        }
 
-            cache_entry = transcoder_new(origpath.c_str(), 0);
-            if (!cache_entry)
+        // Remove write permissions, make no sense
+        stbuf->st_mode &= ~(S_IWUSR | S_IWGRP | S_IWOTH);
+
+        // Get size for resulting output file from regular file, otherwise it's a symbolic link.
+        if (S_ISREG(stbuf->st_mode))
+        {
+            if (!transcoder_cached_filesize(origpath.c_str(), stbuf))
             {
-                return -errno;
-            }
+                struct Cache_Entry* cache_entry;
+
+                cache_entry = transcoder_new(origpath.c_str(), 0);
+                if (!cache_entry)
+                {
+                    return -errno;
+                }
 
 #if defined __x86_64__ || !defined __USE_FILE_OFFSET64
-            stbuf->st_size = (__off_t)transcoder_get_size(cache_entry);
+                stbuf->st_size = (__off_t)transcoder_get_size(cache_entry);
 #else
-            stbuf->st_size = (__off64_t)transcoder_get_size(cache_entry);
+                stbuf->st_size = (__off64_t)transcoder_get_size(cache_entry);
 #endif
-            stbuf->st_blocks = (stbuf->st_size + 512 - 1) / 512;
+                stbuf->st_blocks = (stbuf->st_size + 512 - 1) / 512;
 
-            transcoder_delete(cache_entry);
+                transcoder_delete(cache_entry);
+            }
         }
-    }
 
-    errno = 0;  // Just to make sure - reset any error
+        errno = 0;  // Just to make sure - reset any error
+        break;
+    }
+    default:
+    {
+        break;
+    }
+    case VIRTUALTYPE_PASSTHROUGH: // We will never come here but this shuts up a warning
+    {
+        break;
+    }
+    }
 
     return 0;
 }
@@ -284,39 +444,63 @@ int ffmpegfs_fgetattr(const char *path, struct stat * stbuf, struct fuse_file_in
     }
 
     // This is a virtual file
-    find_original(&origpath);
+    LPCVIRTUALFILE virtualfile = find_original(&origpath);
 
-    if (lstat(origpath.c_str(), stbuf) == -1)
+    assert(virtualfile != NULL);
+
+    switch (virtualfile->m_type)
     {
-        return -errno;
+    case VIRTUALTYPE_SCRIPT:
+    {
+        // Use stored status
+        mempcpy(stbuf, &virtualfile->m_st, sizeof(struct stat));
+        errno = 0;
+        break;
     }
-
-    // Remove write permissions, make no sense
-    stbuf->st_mode &= ~(S_IWUSR | S_IWGRP | S_IWOTH);
-
-    // Get size for resulting output file from regular file, otherwise it's a symbolic link.
-    if (S_ISREG(stbuf->st_mode))
+    case VIRTUALTYPE_REGULAR:
     {
-        struct Cache_Entry* cache_entry;
-
-        cache_entry = (struct Cache_Entry*)(uintptr_t)fi->fh;
-
-        if (!cache_entry)
+        if (lstat(origpath.c_str(), stbuf) == -1)
         {
-            ffmpegfs_error("Tried to stat unopen file: %s.", path);
-            errno = EBADF;
             return -errno;
         }
 
-#if defined __x86_64__ || !defined __USE_FILE_OFFSET64
-        stbuf->st_size = (__off_t)transcoder_buffer_watermark(cache_entry);
-#else
-        stbuf->st_size = (__off64_t)transcoder_buffer_watermark(cache_entry);
-#endif
-        stbuf->st_blocks = (stbuf->st_size + 512 - 1) / 512;
-    }
+        // Remove write permissions, make no sense
+        stbuf->st_mode &= ~(S_IWUSR | S_IWGRP | S_IWOTH);
 
-    errno = 0;  // Just to make sure - reset any error
+        // Get size for resulting output file from regular file, otherwise it's a symbolic link.
+        if (S_ISREG(stbuf->st_mode))
+        {
+            struct Cache_Entry* cache_entry;
+
+            cache_entry = (struct Cache_Entry*)(uintptr_t)fi->fh;
+
+            if (!cache_entry)
+            {
+                ffmpegfs_error("Tried to stat unopen file: %s.", path);
+                errno = EBADF;
+                return -errno;
+            }
+
+#if defined __x86_64__ || !defined __USE_FILE_OFFSET64
+            stbuf->st_size = (__off_t)transcoder_buffer_watermark(cache_entry);
+#else
+            stbuf->st_size = (__off64_t)transcoder_buffer_watermark(cache_entry);
+#endif
+            stbuf->st_blocks = (stbuf->st_size + 512 - 1) / 512;
+        }
+
+        errno = 0;  // Just to make sure - reset any error
+        break;
+    }
+    default:
+    {
+        break;
+    }
+    case VIRTUALTYPE_PASSTHROUGH: // We will never come here but this shuts up a warning
+    {
+        break;
+    }
+    }
 
     return 0;
 }
@@ -353,21 +537,43 @@ int ffmpegfs_open(const char *path, struct fuse_file_info *fi)
     }
 
     // This is a virtual file
-    find_original(&origpath);
+    LPCVIRTUALFILE virtualfile = find_original(&origpath);
 
-    cache_entry = transcoder_new(origpath.c_str(), 1);
-    if (!cache_entry)
+    assert(virtualfile != NULL);
+
+    switch (virtualfile->m_type)
     {
-        return -errno;
+    case VIRTUALTYPE_SCRIPT:
+    {
+        errno = 0;
+        break;
     }
+    case VIRTUALTYPE_REGULAR:
+    {
+        cache_entry = transcoder_new(origpath.c_str(), 1);
+        if (!cache_entry)
+        {
+            return -errno;
+        }
 
-    // Store transcoder in the fuse_file_info structure.
-    fi->fh = (uintptr_t)cache_entry;
-    // Need this because we do not know the exact size in advance.
-    fi->direct_io = 1;
+        // Store transcoder in the fuse_file_info structure.
+        fi->fh = (uintptr_t)cache_entry;
+        // Need this because we do not know the exact size in advance.
+        fi->direct_io = 1;
 
-    // Clear errors
-    errno = 0;
+        // Clear errors
+        errno = 0;
+        break;
+    }
+    default:
+    {
+        break;
+    }
+    case VIRTUALTYPE_PASSTHROUGH: // We will never come here but this shuts up a warning
+    {
+        break;
+    }
+    }
 
     return 0;
 }
@@ -409,15 +615,51 @@ int ffmpegfs_read(const char *path, char *buf, size_t size, off_t offset, struct
         errno = 0;
     }
 
-    cache_entry = (struct Cache_Entry*)(uintptr_t)fi->fh;
+    LPCVIRTUALFILE virtualfile = find_original(&origpath);
 
-    if (!cache_entry)
+    assert(virtualfile != NULL);
+
+    switch (virtualfile->m_type)
     {
-        ffmpegfs_error("Tried to read from unopen file: %s.", origpath.c_str());
-        return -errno;
-    }
+    case VIRTUALTYPE_SCRIPT:
+    {
+        size_t bytes = size;
+        if (offset + bytes > index_buffer.size())
+        {
+            bytes = index_buffer.size() - offset;
+        }
 
-    read = transcoder_read(cache_entry, buf, offset, size);
+        if (bytes)
+        {
+            memcpy(buf, &index_buffer[offset], bytes);
+        }
+
+        read = (ssize_t)bytes;
+        break;
+    }
+    case VIRTUALTYPE_REGULAR:
+    {
+        cache_entry = (struct Cache_Entry*)(uintptr_t)fi->fh;
+
+        if (!cache_entry)
+        {
+            ffmpegfs_error("Tried to read from unopen file: %s.", origpath.c_str());
+            return -errno;
+        }
+
+        read = transcoder_read(cache_entry, buf, offset, size);
+
+        break;
+    }
+    default:
+    {
+        break;
+    }
+    case VIRTUALTYPE_PASSTHROUGH: // We will never come here but this shuts up a warning
+    {
+        break;
+    }
+    }
 
     if (read >= 0)
     {
@@ -450,11 +692,32 @@ int ffmpegfs_statfs(const char *path, struct statvfs *stbuf)
         errno = 0;
     }
 
-    find_original(&origpath);
+    // This is a virtual file
+    LPCVIRTUALFILE virtualfile = find_original(&origpath);
 
-    statvfs(origpath.c_str(), stbuf);
+    assert(virtualfile != NULL);
 
-    errno = 0;  // Just to make sure - reset any error
+    switch (virtualfile->m_type)
+    {
+    case VIRTUALTYPE_SCRIPT:
+    {
+        // Use stored status
+        mempcpy(stbuf, &virtualfile->m_st, sizeof(struct stat));
+        errno = 0;
+        break;
+    }
+    case VIRTUALTYPE_REGULAR:
+    {
+        statvfs(origpath.c_str(), stbuf);
+
+        errno = 0;  // Just to make sure - reset any error
+        break;
+    }
+    case VIRTUALTYPE_PASSTHROUGH: // We will never come here but this shuts up a warning
+    {
+        break;
+    }
+    }
 
     return 0;
 }
@@ -491,6 +754,11 @@ void *ffmpegfs_init(struct fuse_conn_info *conn)
         }
     }
 
+    if (params.m_enablescript)
+    {
+        prepare_script();
+    }
+
     return NULL;
 }
 
@@ -503,6 +771,8 @@ void ffmpegfs_destroy(__attribute__((unused)) void * p)
 
     transcoder_exit();
     transcoder_free();
+
+    index_buffer.clear();
 
     ffmpegfs_debug("%s V%s terminated", PACKAGE_NAME, PACKAGE_VERSION);
 }
